--- a/examples/index.html
+++ b/examples/index.html
@@ -6,14 +6,9 @@
   <link rel="stylesheet" href="css/test.css">
 </head>
 <body>
-  <div class="foo"></div>
-  <div class="bar"></div>
-  <div class="qux"></div>
-  <div class="where"></div>
-  <div class="final"></div>
-  <div class="baz"></div>
-  <div class="waldo"></div>
-  <div class="double"></div>
+  <div class="main"></div>
+  <div class="primary-sidebar"></div>
+  <div class="secondary-sidebar"></div>
 
   <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
